- Fixed DepthShaderProvider no longer creates one DepthShader per bones count. Now it creates only one skinned variant and one non-skinned variant based on DepthShader/Config numBones.
- API Addition: Added Intersector#intersectPlanes to calculate the point intersected by three planes, see https://github.com/libgdx/libgdx/pull/6217

[1.9.11]
- Update to MobiVM 2.3.8
- Update to LWJGL 3.2.3
- Fixed AndroidInput crashes due to missing array resize (pressure array).
- API Change: Ray#set methods and Ray#mul(Matrix4) normalize direction vector. Use public field to set and avoid nor()
- API Change: New internal implementation of all Map and Set classes (except ArrayMap) to avoid OutOfMemoryErrors when too many keys collide. This also helps resistance against malicious users who can choose problematic names.
- API Addition: OrderedMap#alter(Object,Object) and OrderedMap#alterIndex(int,Object) allow swapping out a key in-place without changing its value; OrderedSet also has this.
- API Addition: Json can now read/write: ObjectIntMap, ObjectFloatMap, IntMap, LongMap.
- API Addition: Added @Null annotation for IDE null analysis. All parameters and return values should be considered non-null unless annotated (or javadoc'ed if not yet annotated).
- API Addition: Added ParticleEmitter#preAllocateParticles() and ParticleEffect#preAllocateParticles() to avoid particle allocations during updates.
- Fixed changing looping state of already playing sounds on Android by first pausing the sound before setting the looping state (see #5822).
- API Change: scene2d: Table#getRow now returns -1 when over the table but not over a row (used to return the last row).
- API Change: scene2d: Tree#addToTree and #removeFromTree now have an "int actorIndex" parameter.
- API Addition: scene2d: Convenience method Actions#targeting(Actor, Action) to set an action's target.